--- a/flutter_pages/pubspec.yaml
+++ b/flutter_pages/pubspec.yaml
@@ -59,8 +59,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/logo.png
-
+    - assets/logo-removebg-preview.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
