--- a/flutter_pages/pubspec.yaml
+++ b/flutter_pages/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  firebase_auth:
+  firebase_auth: ^0.18.3+1
   provider:
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
