--- a/flutter_pages/pubspec.yaml
+++ b/flutter_pages/pubspec.yaml
@@ -29,8 +29,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  firebase_core: ^1.10.2
+  firebase_auth: ^3.3.0
+  provider:
+  firebase_core_platform_interface: 4.5.1
+  firebase_messaging: ^13.0.4 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -38,8 +41,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  firebase_auth: ^0.18.3+1
-  provider:
+  
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
