--- a/flutter_pages/android/app/src/main/AndroidManifest.xml
+++ b/flutter_pages/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.flutter_pages">
+    <queries>
+        <intent>
+            <action android:name = "android.intent.action.SEND"/>
+            <data android:mimeType = "*/*" />
+        </intent>
+    </queries>
    <application
         android:label="flutter_pages"
         android:name="${applicationName}"
